--- a/moven/app.json
+++ b/moven/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Moven",
-    "slug": "rn",
+    "slug": "moven",
     "privacy": "public",
     "sdkVersion": "34.0.0",
     "platforms": [
@@ -11,11 +11,11 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#3d95ce"
+      "backgroundColor": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
